--- a/src/pages/Navbar.css
+++ b/src/pages/Navbar.css
@@ -18,6 +18,7 @@
   transition: top 0.4s ease;
   z-index: 1000;
   box-shadow: 0 6px 12px rgba(100, 45, 129, 0.1);
+  font-family: 'Outfit', sans-serif;
 }
 
 .navbar.hidden {
