--- a/src/pages/Gallery.css
+++ b/src/pages/Gallery.css
@@ -244,6 +244,17 @@
 }
 
 @media screen and (max-width: 450px) {
+  .fun-play-section {
+    flex-direction: column;
+    align-items: center;
+    margin-top: -190px;
+  }
+  .gallery-page{
+    background-color: #ebe1ff;
+    height: 100%;
+    font-family: 'Outfit', sans-serif;
+    margin-top: 100px;
+}
   .feature-title {
     font-size: 1.8rem;
   }
@@ -256,6 +267,45 @@
     width: 160px;
     height: 120px;
   }
+  .feature-title {
+    padding: 20px 20px;
+  font-size: 2rem;
+  background: linear-gradient(to right, #65318e);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-weight: 800;
+  margin-bottom: 30px;
+  text-align: left;
+}
+
+.feature-content {
+  width: 100%;
+  color: #f0f0f0;
+}
+
+.feature-list {
+  list-style: none;
+  columns: 2;
+  gap: 10px;
+  padding: 0;
+  margin: 0;
+}
+
+.feature-list-item {
+  position: relative;
+  margin: 10px 0;
+  font-size: 1.2rem;
+  padding-left: 25px;
+  color: #65318e;
+  font-weight: 600;
+  transition: transform 0.3s, color 0.3s;
+}
+
+.feature-list-item:hover {
+  transform: scale(1.05);
+  color: #65318e;
+}
+
 }
 
 
@@ -545,6 +595,13 @@
 }
 
 @media screen and (max-width: 480px) {
+  .shapes-gallery-section {
+  padding: 60px 30px;
+  text-align: center;
+  height: 110vh;
+  margin-top: -320px;
+  margin-bottom: 50px;
+}
   .shapes-heading {
     font-size: 24px;
   }
@@ -554,8 +611,8 @@
   }
 
   .shape-item {
-    width: 140px;
-    height: 140px;
+    width: 250px;
+    height: 250px;
   }
 }
 
@@ -618,7 +675,6 @@
   border: 4px solid #642d81;
 }
 
-/* Animations */
 @keyframes scroll-left {
   0% { transform: translateX(-50%); }
   100% { transform: translateX(0%); }
@@ -629,7 +685,6 @@
   100% { transform: translateX(-50%); }
 }
 
-/* Responsive */
 @media screen and (max-width: 768px) {
   .moving-gallery-heading {
     font-size: 28px;
@@ -760,18 +815,50 @@
   }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 450px) {
   .infra-gallery-heading {
-    font-size: 24px;
+    font-size: 20px;
+  }
+
+  .infra-container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .infra-row,
+  .infra-middle {
+    flex-direction: column;
+    gap: 16px;
+  }
+
+  .infra-video-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 16px;
+    padding: 12px;
   }
 
   .infra-video {
-    width: 130px;
+    width: 100%;
     height: 150px;
+    border-radius: 10px;
+    border: 4px solid #642d81;
+    object-fit: cover;
+  }
+
+  .infra-fence-image-container {
+    display: none;
+    grid-template-columns: repeat(2, 1fr) !important;
+    gap: 16px;
+    padding: 12px;
   }
 
   .infra-fence-image {
-    width: 50px;
-    height: 40px;
+    width: 100%;
+    height: 120px;
+    object-fit: cover;
+    border-radius: 6px;
+    border: 3px solid #e2d6f3;
+    image-rendering: auto;
   }
 }
