--- a/src/pages/Footer.css
+++ b/src/pages/Footer.css
@@ -92,6 +92,10 @@
   font-size: 16px;
   margin-bottom: 8px;
   text-align: left;
+  gap: 10px;
+}
+.contact-details p svg {
+  margin-right: 10px; 
 }
 
 .footer-social {
@@ -296,4 +300,22 @@
   height: auto;
   margin-top: 20px;
   border-radius: 10px;
+}
+.extra {
+  display: flex;
+  justify-content: flex-start;
+  gap: 20px; 
+  margin-top: 15px;
+}
+
+.footer-image1 {
+  width: 80px;
+  height: auto;
+  border-radius: 8px;
+}
+.footer-image2 {
+  margin-top: 20px;
+  width: 80px;
+  height: auto;
+  border-radius: 8px;
 }
